fix some linting issues