@@ -2,16 +2,13 @@ package com.adventofcode;
 
 public class ChallengeFactory {
 
-	public static Challenge createChallenge(int year, int day, int challenge) {
+	public static Challenge createChallenge(final int year, final int day, final int challenge) {
 		try {
-			String packageName = "com.adventofcode.y" + year + ".day" + day;
-			String className = "Day" + day + "Challenge" + challenge;
-			Object challengeObj = Class.forName(packageName + "." + className)
-					.getConstructor()
-					.newInstance();
+			final String packageName = "com.adventofcode.y" + year + ".day" + day;
+			final String className = "Day" + day + "Challenge" + challenge;
+			final Object challengeObj = Class.forName(packageName + "." + className).getConstructor().newInstance();
 			return (Challenge) challengeObj;
-		}
-		catch( Exception e ) {
+		} catch (final Exception e) {
 			return new NullChallenge();
 		}
 	}
